<resources>
    <string name="app_name">Calculator</string>
    <string name="exit">Are you sure you want to exit ?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="welcome">Welcome !</string>
    <string name="cal_type2">Scientific Calculator</string>
    <string name="cal_type1">Simple Calculator</string>
    <string name="x">x</string>
    <string name="add">+</string>
    <string name="mul_inverse">+/-</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="eight">8</string>
    <string name="equal">=</string>
    <string name="C">C</string>
    <string name="minus">-</string>
    <string name="five">5</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="percent">%</string>
    <string name="two">2</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="nine">9</string>
    <string name="three">3</string>
    <string name="zero">0</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="deg">deg</string>
    <string name="second">2nd</string>
    <string name="e">e</string>
    <string name="closing_bracket">)</string>
    <string name="opening_bracket">(</string>
    <string name="natural_log">In</string>
    <string name="log">lg</string>
    <string name="mod">|X|</string>
    <string name="onebyx">1/x</string>
    <string name="tan">tan</string>
    <string name="version">Version (1.0)</string>
    <string name="rate">Rate Us</string>
    <string name="privacy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="exits">Exit</string>
    <string name="warning_msg">Are you sure you want to exit?</string>
    <string name="title">Exit Alert</string>
</resources>