<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottm_sheet_corner_radius"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/rateus"
            >
        </ImageView>
        <TextView
            android:id="@+id/rating"
           android:onClick="onClickMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"

            android:gravity="center_vertical">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/privacypolicy"
           >

        </ImageView>

        <TextView
            android:id="@+id/privacypolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:onClick="onClickMethod"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:gravity="center_vertical">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_gravity="center"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/share"


        >
        </ImageView>
        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:onClick="onClickMethod"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:gravity="center_vertical">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/version"
            android:layout_gravity="center"
          >
        </ImageView>
        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:onClick="onClickMethod"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/white"
            android:padding="@dimen/_10sdp"
            android:gravity="center_vertical">
        </TextView>
    </LinearLayout>

</LinearLayout>