<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".HomeScreen">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/simpleCalculation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toStartOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline12">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/simpleCalculation2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:onClick="onClickMethod"
            >

            <TextView
                android:id="@+id/simpleCalculation3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="onClickMethod"
                android:padding="@dimen/_15sdp"
                android:text="@string/cal_type1"
                android:textColor="@color/white"
                android:textSize="20sp" >
            </TextView>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scientificCalculations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline15"
        app:layout_constraintTop_toTopOf="@+id/guideline12">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/scientificCalculations2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:onClick="onClickMethod"
            app:cardBackgroundColor="#fcb045">


            <TextView
                android:id="@+id/scientificCalculations3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="onClickMethod"
                android:padding="@dimen/_15sdp"
                android:text="@string/cal_type2"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#fa980b"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideline20"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/welcome"
            android:layout_marginStart="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp">

        </TextView>

    </LinearLayout>

    <view
        class="android.widget.LinearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#fa980b"
        app:layout_constraintBottom_toTopOf="@id/guideline19"
        app:layout_constraintLeft_toRightOf="@+id/guideline20"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </view>

    <ImageView

        android:id="@+id/side_menu"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/sidemenu"
        android:onClick="onClickMethod"
        app:layout_constraintBottom_toTopOf="@id/guideline19"
        app:layout_constraintLeft_toRightOf="@id/guideline20"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />


</androidx.constraintlayout.widget.ConstraintLayout>